# pybind11_protobuf

./: .gitignore  meson.build
subprojects/: abseil-cpp.wrap  protobuf.wrap
